src/objects/Alliances__c.object
<CustomObject>
    <description>Used to track alliance management</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alliances</relationshipLabel>
        <relationshipName>Alliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_or_Focus_Other__c</fullName>
        <label>Industry (or Focus) Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_or_Focus__c</fullName>
        <label>Industry (or Focus)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>EDU</fullName>
                </value>
                <value>
                    <fullName>First Responder</fullName>
                </value>
                <value>
                    <fullName>Government (State/Local)</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>FSI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contact_Title__c</fullName>
        <formula>Main_Point_of_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Point of Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alliances</relationshipLabel>
        <relationshipName>Alliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_and_Training__c</fullName>
        <label>Onboarding and Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POC_Date__c</fullName>
        <label>POC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <label>POC</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Use_Cases__c</fullName>
        <label>Partner Use Cases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
                <value>
                    <fullName>Badge Only</fullName>
                </value>
                <value>
                    <fullName>Peer-to-Peer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Vision__c</fullName>
        <label>Partner Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Goal__c</fullName>
        <label>Partnership Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Type__c</fullName>
        <label>Partnership Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solution Integrator</fullName>
                </value>
                <value>
                    <fullName>Technology / OEM VAR</fullName>
                </value>
                <value>
                    <fullName>Consultancy Implementer</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rational__c</fullName>
        <label>Rational</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sign_Date__c</fullName>
        <label>Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sign__c</fullName>
        <label>Sign</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Qualification</fullName>
                </value>
                <value>
                    <fullName>1 - Discovery</fullName>
                </value>
                <value>
                    <fullName>2 - Shaping</fullName>
                </value>
                <value>
                    <fullName>3 - POC/Pilot</fullName>
                </value>
                <value>
                    <fullName>4 - In-Contract</fullName>
                </value>
                <value>
                    <fullName>5 - Signed</fullName>
                </value>
                <value>
                    <fullName>6 - Not Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alliance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>